Fixed Extra space to the right.. continuing to finalize layout

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,12 +12,19 @@ sans-serif;
 body,
 .img-div {
     margin: 0 auto;
-    padding: 0 auto;
 }
 
 .container-full {
     margin: 0 auto;
     width: 100%;
+}
+
+.row-full{
+      width: 100vw;
+      position: relative;
+      margin-left: -50vw;
+      margin-top: 100px;
+      left: 50%;
 }
 
 .starter-template {
@@ -288,6 +295,7 @@ b {
 
 .jumbotron {
     background: #fff;
+    margin-top: 1rem;
 }
 
 .img-div-list li {
@@ -320,6 +328,15 @@ b {
     margin-right: -4px;
 }
 
+.center-img {
+        display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-responsive {
+    width: 300px;
+}
 h3.text-center {
     color: #fff;
     font-size: 1.75rem;
